--- a/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Phone8/Views/ItemDescriptionView.xaml
+++ b/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Phone8/Views/ItemDescriptionView.xaml
@@ -1,6 +1,5 @@
 ﻿<views:MvxPhonePage
     xmlns:views="clr-namespace:Cirrious.MvvmCross.WindowsPhone.Views;assembly=Cirrious.MvvmCross.WindowsPhone"
-    x:Class="XPlatformCloudKit.Views.ItemDescriptionView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -8,6 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:SampleData="clr-namespace:XPlatformCloudKit.SampleData;assembly=XPlatformCloudKit.PCL"
+    xmlns:maps="clr-namespace:Microsoft.Phone.Maps.Controls;assembly=Microsoft.Phone.Maps"
+    x:Class="XPlatformCloudKit.Views.ItemDescriptionView"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -17,6 +18,13 @@
     d:DataContext="{d:DesignInstance SampleData:ItemDescriptionSampleData, IsDesignTimeCreatable=True}"
     >
 
+    <views:MvxPhonePage.ApplicationBar >
+        <shell:ApplicationBar x:Name="AppBar" Mode="Default" Opacity="0.7" IsVisible="True" IsMenuEnabled="False">
+            <shell:ApplicationBarIconButton x:Name="PreviousButton" IconUri="/Assets/Icons/Previous.png" Text="previous" Click="PreviousButton_Click" />
+            <shell:ApplicationBarIconButton x:Name="ShareButton" IconUri="/Assets/Icons/Share.png" Text="share" Click="ShareButton_Click" />
+            <shell:ApplicationBarIconButton x:Name="NextButton" IconUri="/Assets/Icons/Next.png" Text="next" Click="NextButton_Click" />
+        </shell:ApplicationBar>
+    </views:MvxPhonePage.ApplicationBar>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -33,11 +41,11 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-        	<Grid.RowDefinitions>
-        		<RowDefinition Height="115"/>
-        		<RowDefinition Height="29*"/>
-        		<RowDefinition Height="463*"/>
-        	</Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="115"/>
+                <RowDefinition Height="29*"/>
+                <RowDefinition Height="463*"/>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -53,11 +61,4 @@
             <!--<TextBlock Text="{Binding SelectedItem.Description}" Style="{StaticResource BodyTextStyle}" TextWrapping="Wrap" TextTrimming="None" Margin="0" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2"/> -->
         </Grid>
     </Grid>
-    <phone:PhoneApplicationPage.ApplicationBar >
-        <shell:ApplicationBar x:Name="AppBar" Mode="Default" Opacity="0.7" IsVisible="True" IsMenuEnabled="False">
-            <shell:ApplicationBarIconButton x:Name="PreviousButton" IconUri="/Assets/Icons/Previous.png" Text="previous" Click="PreviousButton_Click" />
-            <shell:ApplicationBarIconButton x:Name="ShareButton" IconUri="/Assets/Icons/Share.png" Text="share" Click="ShareButton_Click" />
-            <shell:ApplicationBarIconButton x:Name="NextButton" IconUri="/Assets/Icons/Next.png" Text="next" Click="NextButton_Click" />
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
 </views:MvxPhonePage>
